tbd  Sun Microsystems, Inc.
       * version 3.0.5

--------------------------------------------------------------------------------

2008-01-11  Sun Microsystems, Inc.
       * version 3.0.4

Severity   : normal
Bugzilla   : 13397
Description: Add support for vanilla-2.6.22 kernel.

--------------------------------------------------------------------------------

2007-12-07  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 3.0.3

Severity   : normal
Bugzilla   : 13164
Description: statfs speedup patches.
Details    : The patches  improve statfs performance for very large
	     filesystems.

Severity   : normal
Frequency  : if the uninit_groups feature is enabled on ldiskfs
Bugzilla   : 13706
Description: e2fsck reports "invalid unused inodes count"
Details    : If a new ldiskfs filesystem is created with the "uninit_groups"
	     feature and only a single inode is created in a group then the
	     "bg_unused_inodes" count is incorrectly updated.  Creating a
	     second inode in that group would update it correctly.

--------------------------------------------------------------------------------

2007-09-27         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 3.0.2

Severity   : enhancement
Bugzilla   : 10555
Description: Add a FIEMAP(FIle Extent MAP) ioctl for ldiskfs
Details    : FIEMAP ioctl will allow an application to efficiently fetch the
	     extent information of a file. It can be used to map logical blocks
	     in a file to physical blocks in the block device.

--------------------------------------------------------------------------------

2007-08-29         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 3.0.1

Severity   : major
Frequency  : rare
Bugzilla   : 6334
Description: Multiple mount protection(MMP) support.
Details    : This feature will protect the filesystem from being mounted more
	     than once simultaneously. It will also protect changes by e2fsprogs